# Chatbot-Backend

./: .gitignore  CLAUDE.md  TRACING.md  backend.py  clean_data.py  index_modules.ipynb  index_modules.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: master_finlit-chatbot-backend.yml
Documentation/: FRONTEND_STREAM_HANDLING_FIX.md  FinLit Assistant_ Avatar System Prompts.txt  REWRITE_QUERY_STREAM_LEAK_FIX.md  STREAMING_API_CONTRACT.md  System-Prompts.md  chatbot_script.txt
app/: main.py
app/services/: avatars.py  chain.py  ferpa.py  guardrails.py  llm.py  logger.py  pii_detector.py  rag.py  tracing.py
data/: Building Healthy Habits_ Account Management Foundations.txt  Building Healthy Habits_ Creating New Habits.txt  Building Healthy Habits_ Just Start.txt  Building Healthy Habits_ Selecting a Financial Institution_ .txt  Building Healthy Habits_ Tactics for Mindful Decision Making.txt  Building Healthy habits_ Student Loans.txt  Course Outline- Javion.txt  Financial Independence_ Brooklyn Rent Strikes.txt  Financial Independence_ Let Them Eat Cereal.txt  Financial Independence_ Pay it forward.txt  Intro to Navigating Credit.txt  Money Management_ Bridging Income Gaps.txt  Money Management_ Give Yourself Grace.txt  Money Management_ Income Taxes.txt  Money Management_ Know Your Rights.txt  Money Management_ Methods and Tools.txt  Money Mindset - Introduction to Money Mindsets.txt  Money Mindset Conclusion.txt  Money Mindset_ Behavior That Prevent Progress.txt  Money Mindset_ Cycle of Socialization.txt  Money Mindset_ Unpacking and Unlearning.txt  Money mindset_ Cycle of Liberation.txt  Navagating Credit_ Installment Loans vs.txt  Navigating Credit_ What Makes a Good FICO Score.txt  Planning for the Future – Online Financial Safety.txt  Planning for the Future_ Filing a Dispute.txt  _Money Management_ Salary Negotiation.txt  video_manifest.csv
data/Module-1/: Money Mindset_ Cycle of Socialization.docx
data/chunks/: chunks.json
data/cleaned/: Building Healthy Habits_ Account Management Foundations.txt  Building Healthy Habits_ Creating New Habits.txt  Building Healthy Habits_ Just Start.txt  Building Healthy Habits_ Selecting a Financial Institution_ .txt  Building Healthy Habits_ Setting Financial Goals.txt  Building Healthy Habits_ Tactics for Mindful Decision Making.txt  Building Healthy Habits_ Using Payment Apps.txt  Building Healthy habits_ Student Loans.txt  Building Healtyhy Habits_ Avoiding Fees and Overdrafts.txt  Financial Independence_ Brooklyn Rent Strikes.txt  Financial Independence_ Consistency is Key.txt  Financial Independence_ Let Them Eat Cereal.txt  Financial Independence_ Pay it forward.txt  Financial Independence_ Personal Reflection.txt  Financial Independence_ The Short Squeeze.txt  Financial Independence_ Use Your Power for Good.txt  Intro to Navigating Credit.txt  Money Management_ Common Student Decisions.txt  Money Management_ Give Yourself Grace.txt  Money Management_ Income Taxes.txt  Money Management_ Methods and Tools.txt  Money Management_ Saving Tips & Tricks.txt  Money Management_ Spending Plan Foundations.txt  Money Mindset - Introduction to Money Mindsets.txt  Money Mindset Conclusion.txt  Money Mindset_ Behavior That Prevent Progress.txt  Money Mindset_ Cycle of Socialization.txt  Money Mindset_ First Gen Students.txt  Money Mindset_ Money and Relationships.txt  Money Mindset_ Unpacking and Unlearning.txt  Money mindset_ Cycle of Liberation.txt  Money mindset_ Generational Legacies.txt  Navagating Credit_ Auto Loans Deep Dive.txt  Navagating Credit_ Credit Cards as a Financial Tool.txt  Navagating Credit_ Deciding to take out a loan.txt  Navagating Credit_ Installment Loans vs.txt  Navagating Credit_ The History of Credit Reports.txt  Navigating Credit – Know Your Rights.txt  Navigating Credit_ Paying Down Debt.txt  Navigating Credit_ Student Loan Deep Dive.txt  (+6 more)
data/raw/: Building Healthy Habits_ Account Management Foundations.txt  Building Healthy Habits_ Selecting a Financial Institution_ .txt  Building Healthy Habits_ Setting Financial Goals.txt  Building Healthy Habits_ Using Payment Apps.txt  Building Healtyhy Habits_ Avoiding Fees and Overdrafts.txt  Course Outline- Javion.txt  Financial Independence – Embracing Your Worth.txt  Financial Independence – Ethical Investing.txt  Financial Independence_ Consistency is Key.txt  Financial Independence_ Pay it forward.txt  Financial Independence_ The Short Squeeze.txt  Financial Independence_ Use Your Power for Good.txt  Money Management_ Common Student Decisions.txt  Money Management_ Income Taxes.txt  Money Management_ Know Your Rights.txt  Money Management_ Saving Tips & Tricks.txt  Money Management_ Spending Plan Foundations.txt  (+14 more)
resources/logs/: log.json
tests/: eval_retrieval.py  test_azure_index.py  test_chat_endpoint.py  test_ferpa_sanitizer.py  test_guardrails.py  test_indexing_pipeline.py  test_tracing.py
(+64 files in other folders)
