[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-dotenv>=0.5.2",
]

[project]
name = "finlit-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "azure-core==1.30.2",
    "azure-search-documents==11.6.0b8",
    "fastapi==0.115.0",
    "ipykernel>=7.2.0",
    "langchain==0.3.7",
    "langchain-community==0.3.7",
    "langchain-openai==0.2.9",
    "openai>=1.0.0",
    "pandas>=2.3.3",
    "pydantic==2.9.2",
    "python-dotenv==1.0.1",
    "python-json-logger>=2.0.7",
    "tiktoken>=0.12.0",
    "uvicorn==0.30.6",
]

[tool.pyrefly]
project_includes = ["."]
# Resolve imports from the repo root (the package is `app/`, not the legacy `src/` layout pyrefly auto-infers)
search_path = ["."]

[tool.pyright]
pythonVersion = "3.11"
include = ["app"]
