[dependency-groups]
# Dev-only tooling: tests, notebooks, and data preprocessing.
# Kept OUT of the deployed requirements.txt (regenerate with: uv export --no-dev).
dev = [
    "pytest>=8.0",
    "pytest-dotenv>=0.5.2",
    "ipykernel>=7.2.0",   # Jupyter notebooks only
    "pandas>=2.3.3",      # used by tests / data preprocessing, not the web app
]

[project]
name = "finlit-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "azure-core==1.30.2",
    "azure-search-documents==11.6.0b8",
    "fastapi==0.115.0",
    "langchain==0.3.7",
    "langchain-community==0.3.7",
    "langchain-openai==0.2.9",
    "openai>=1.0.0",
    "presidio-analyzer>=2.2.355",
    "spacy>=3.7.0,<4.0",
    # spaCy English model — pinned wheel so Oryx build picks it up without a separate download step
    "en-core-web-sm",
    "pydantic==2.9.2",
    "python-dotenv==1.0.1",
    "python-json-logger>=2.0.7",
    "tiktoken>=0.12.0",
    "uvicorn==0.30.6",
]

[tool.pytest.ini_options]
# Resolve imports from the repo root so `import app...` works under pytest
pythonpath = ["."]

[tool.pyrefly]
project_includes = ["."]
# Resolve imports from the repo root (the package is `app/`, not the legacy `src/` layout pyrefly auto-infers)
search_path = ["."]

[tool.pyright]
pythonVersion = "3.11"
include = ["app"]

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }
